Blog page added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -20,7 +21,7 @@
                 </div>
             </nav>
             <div class="bottom-page1">
-                <h1>Experience Real <br> State Agility</h1>
+                <h1>Experience Real State Agility</h1>
                 <div class="bottom-page1-inner">
                     <h3>Create a digital view of your house,
                         <br> building and office</h3>
@@ -81,6 +82,39 @@
                         <h1>An Index of digitization</h1>
                         <p>The Magma Index provides valuable insight for decision-making regarding data-sharing, service-creating, and operational/environmental expectations.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div id="page10">
+            <h1>Recent blog</h1>
+            <div class="page10-inner">
+                <div class="img-upper">
+                    <div class="image">
+                    </div>
+                </div>
+                <div class="blog-details">
+                    <p>REAL ESTATE AND WEB3 / DEC 07, 2023</p>
+                    <h1>Magma - Bringing 𝗧𝗮𝗻𝗴𝗶𝗯𝗹𝗲 𝗩𝗮𝗹𝘂𝗲 𝘁𝗼 𝗡𝗙𝗧𝘀 𝗶𝗻 𝗥𝗲𝗮𝗹 𝗘𝘀𝘁𝗮𝘁𝗲</h1>
+                </div>
+            </div>
+            <div class="page10-inner">
+                <div class="img-upper">
+                    <div class="image1">
+                    </div>
+                </div>
+                <div class="blog-details">
+                    <p>REAL ESTATE AND WEB3 / DEC 07, 2023</p>
+                    <h1>Magma - Bringing 𝗧𝗮𝗻𝗴𝗶𝗯𝗹𝗲 𝗩𝗮𝗹𝘂𝗲 𝘁𝗼 𝗡𝗙𝗧𝘀 𝗶𝗻 𝗥𝗲𝗮𝗹 𝗘𝘀𝘁𝗮𝘁𝗲</h1>
+                </div>
+            </div>
+            <div class="page10-inner">
+                <div class="img-upper">
+                    <div class="image2">
+                    </div>
+                </div>
+                <div class="blog-details">
+                    <p>REAL ESTATE AND WEB3 / DEC 07, 2023</p>
+                    <h1>Magma - Bringing 𝗧𝗮𝗻𝗴𝗶𝗯𝗹𝗲 𝗩𝗮𝗹𝘂𝗲 𝘁𝗼 𝗡𝗙𝗧𝘀 𝗶𝗻 𝗥𝗲𝗮𝗹 𝗘𝘀𝘁𝗮𝘁𝗲</h1>
                 </div>
             </div>
         </div>
