--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -117,10 +118,43 @@
                     <h1>Magma - Bringing 𝗧𝗮𝗻𝗴𝗶𝗯𝗹𝗲 𝗩𝗮𝗹𝘂𝗲 𝘁𝗼 𝗡𝗙𝗧𝘀 𝗶𝗻 𝗥𝗲𝗮𝗹 𝗘𝘀𝘁𝗮𝘁𝗲</h1>
                 </div>
             </div>
+            <button class="btn">View all</button>
+        </div>
+        <div id="page11">
+            <div class="page11-inner">
+                <h1>Featured In</h1>
+                <p>Thrilled to have been featured in several prominent media outlets and leading professionals across the world’s best real estate and web3 institutions.</p>
+            </div>
+        </div>
+        <div id="page12">
+            <div class="page12-inner">
+                <h1>Become an early adopter</h1>
+                <button>
+                    <span>BOOK A DEMO</span>
+                    <div class="btn-inner"></div>
+                </button>
+            </div>
+        </div>
+        <div id="page13">
+            <div class="page13-inner">
+                <h1>Twitter</h1>
+                <i class="fa-solid fa-arrow-up"></i>                 
+                <div class="center"></div>
+            </div>
+            <div class="page13-inner">
+                <h1>LinkdIn</h1>
+                <i class="fa-solid fa-arrow-up"></i>
+                <div class="center"></div>                 
+            </div>
+            <div class="page13-inner">
+                <h1>Instagram</h1>
+                <i class="fa-solid fa-arrow-up"></i> 
+                <div class="center"></div>
+            </div>
         </div>
     </div>
 
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
